parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Root: peg$parseRoot },
      peg$startRuleFunction  = peg$parseRoot,

      peg$c0 = function(types) { return { schema: types.reduce(extend, {}) } },
      peg$c1 = "type",
      peg$c2 = peg$literalExpectation("type", false),
      peg$c3 = function(name, definition) {
        return { [name]: definition }
      },
      peg$c4 = function(descriptor) { return descriptor },
      peg$c5 = function(kind) { return kind },
      peg$c6 = "map",
      peg$c7 = peg$literalExpectation("map", false),
      peg$c8 = "list",
      peg$c9 = peg$literalExpectation("list", false),
      peg$c10 = "enum",
      peg$c11 = peg$literalExpectation("enum", false),
      peg$c12 = "union",
      peg$c13 = peg$literalExpectation("union", false),
      peg$c14 = "struct",
      peg$c15 = peg$literalExpectation("struct", false),
      peg$c16 = function(kind) { return { kind } },
      peg$c17 = "[",
      peg$c18 = peg$literalExpectation("[", false),
      peg$c19 = "]",
      peg$c20 = peg$literalExpectation("]", false),
      peg$c21 = function(fields) {
        return extend({ kind: 'list' }, fields)
      },
      peg$c22 = function(options, valueType) {
        return options.reduce(extend, { valueType })
      },
      peg$c23 = "{",
      peg$c24 = peg$literalExpectation("{", false),
      peg$c25 = "}",
      peg$c26 = peg$literalExpectation("}", false),
      peg$c27 = function(values) {
        return {
          kind: 'enum',
          members: values.reduce(extend, {})
        }
      },
      peg$c28 = "|",
      peg$c29 = peg$literalExpectation("|", false),
      peg$c30 = function(name) { return { [name]: null } },
      peg$c31 = function(values, representation) {
        let fields = values.reduce(extend, {})
        let representationType = representation.type
        switch (representationType) {
          case 'keyed':
          case 'kinded':
            representation = { [representationType]: fields }
            break
          case 'inline': // TODO: inline unions have to contain certain types that can be inlined, structs, maps?
          case 'envelope':
            representation = { [representationType]: extend(representation, { discriminantTable: fields }) }
            break
          default:
            throw new Error('Unsupported')
        }
        delete representation[representationType].type
        return extend({ kind: 'union' }, { representation })
      },
      peg$c32 = function(type, name) { return { [name]: type } },
      peg$c33 = function(name, kind) { return { [kind]: name } },
      peg$c34 = ":",
      peg$c35 = peg$literalExpectation(":", false),
      peg$c36 = function(keyType, valueType, representation) {
        let representationType = (representation && representation.type)
        if (representationType) {
          representation = { [representationType]: representation || {} }
          delete representation[representationType].type
        }
        return Object.assign({ kind: 'map', keyType }, valueType, representation ? { representation } : null)
      },
      peg$c37 = function(values, representation) {
        let fields = values.reduce(extend, {})
        // field representation options can come in from parens following field definitions, we need
        // to lift them out into the 'representation' object
        const representationFields = Object.entries(fields).reduce((p, fieldEntry) => {
          if (fieldEntry[1].representationOptions) {
            p[fieldEntry[0]] = fieldEntry[1].representationOptions
            delete fieldEntry[1].representationOptions
          }
          return p
        }, {})
        let representationType = (representation && representation.type)
        if (representationType) {
          // restructure from { type: 'foo', bar: 'baz' } to { foo: { bar: 'baz' } }
          representation = { [representationType]: representation || {} }
          delete representation[representationType].type
          /* auto-fill fieldOrder? if (representationType === 'tuple' && !representation.tuple.fieldOrder) {
            representation.tuple.fieldOrder = Object.keys(fields)
          } */
        }
        // handle inline field representation data
        if (Object.keys(representationFields).length) {
          if (!representation) {
            representation = defaultStructRepresentation()
          }
          if (!representation.map) {
            throw new Error('field modifiers only valid for struct map representation')
          }
          representation.map.fields = representationFields
        }
        return extend({ kind: 'struct', fields }, { representation: representation || defaultStructRepresentation() })
      },
      peg$c38 = function(key, options, type, representationOptions) {
        return { [key]: options.reduce(extend, extend({ type }, representationOptions ? { representationOptions } : null)) }
      },
      peg$c39 = "optional",
      peg$c40 = peg$literalExpectation("optional", false),
      peg$c41 = function() { return { optional: true } },
      peg$c42 = "nullable",
      peg$c43 = peg$literalExpectation("nullable", false),
      peg$c44 = function() { return { nullable: true } },
      peg$c45 = function() { return { valueNullable: true } },
      peg$c46 = function(type) { return type },
      peg$c47 = "(",
      peg$c48 = peg$literalExpectation("(", false),
      peg$c49 = ")",
      peg$c50 = peg$literalExpectation(")", false),
      peg$c51 = function(options) {
        return options.reduce(extend, {})
      },
      peg$c52 = "implicit",
      peg$c53 = peg$literalExpectation("implicit", false),
      peg$c54 = function(implicit) { return { implicit: coerceValue(implicit) } },
      peg$c55 = "rename",
      peg$c56 = peg$literalExpectation("rename", false),
      peg$c57 = function(rename) { return { rename } },
      peg$c58 = "representation",
      peg$c59 = peg$literalExpectation("representation", false),
      peg$c60 = function(representation) {
        return representation
      },
      peg$c61 = "keyed",
      peg$c62 = peg$literalExpectation("keyed", false),
      peg$c63 = function() { return { type: 'keyed' } },
      peg$c64 = "kinded",
      peg$c65 = peg$literalExpectation("kinded", false),
      peg$c66 = function() { return { type: 'kinded' } },
      peg$c67 = "inline",
      peg$c68 = peg$literalExpectation("inline", false),
      peg$c69 = "envelope",
      peg$c70 = peg$literalExpectation("envelope", false),
      peg$c71 = "discriminantKey",
      peg$c72 = peg$literalExpectation("discriminantKey", false),
      peg$c73 = function(discriminantKey) {
        return { type: 'inline', discriminantKey }
      },
      peg$c74 = "contentKey",
      peg$c75 = peg$literalExpectation("contentKey", false),
      peg$c76 = function(discriminantKey, contentKey) {
        return { type: 'envelope', discriminantKey, contentKey }
      },
      peg$c77 = function() { return { type: 'map' } },
      peg$c78 = "listpairs",
      peg$c79 = peg$literalExpectation("listpairs", false),
      peg$c80 = function() { return { type: 'listpairs' } },
      peg$c81 = "stringpairs",
      peg$c82 = peg$literalExpectation("stringpairs", false),
      peg$c83 = function(representation) { return representation },
      peg$c84 = function(options) {
        let representation = extend({ type: 'stringpairs' }, options.reduce(extend, {}))
        if (!representation.innerDelim || !representation.entryDelim) {
          throw new Error('"stringpairs" representation requires both "innerDelim" and "entryDelim" options')
        }
        return representation
      },
      peg$c85 = "innerDelim",
      peg$c86 = peg$literalExpectation("innerDelim", false),
      peg$c87 = function(innerDelim) { return { innerDelim } },
      peg$c88 = "entryDelim",
      peg$c89 = peg$literalExpectation("entryDelim", false),
      peg$c90 = function(entryDelim) { return { entryDelim } },
      peg$c91 = "tuple",
      peg$c92 = peg$literalExpectation("tuple", false),
      peg$c93 = function(fieldOrder) { return extend({ type: 'tuple' }, fieldOrder ? { fieldOrder } : null) },
      peg$c94 = "stringjoin",
      peg$c95 = peg$literalExpectation("stringjoin", false),
      peg$c96 = function(fields) { return extend({ type: 'stringjoin' }, fields ) },
      peg$c97 = "field",
      peg$c98 = peg$literalExpectation("field", false),
      peg$c99 = function(field, isImplicit, implicitValue) {
        return { [field]: extend({}, isImplicit ? { implicit: coerceValue(implicitValue) } : null) }
      },
      peg$c100 = function(fieldOrder) {
        return fieldOrder
      },
      peg$c101 = "fieldOrder",
      peg$c102 = peg$literalExpectation("fieldOrder", false),
      peg$c103 = function(fields) {
        fields = fields.reduce(extend, {})
        if (!fields.join) {
          throw new Error('stringjoin representation needs a "join" specifier')
        }
        return fields
      },
      peg$c104 = "join",
      peg$c105 = peg$literalExpectation("join", false),
      peg$c106 = function(join) {
        return { join }
      },
      peg$c107 = function(fieldOrder) {
        return { fieldOrder }
      },
      peg$c108 = ",",
      peg$c109 = peg$literalExpectation(",", false),
      peg$c110 = function(firstElement, s) { return s },
      peg$c111 = function(firstElement, subsequentElements) {
        if (!firstElement) {
          return []
        }
        if (!subsequentElements) {
          return [ firstElement ]
        }
        return [ firstElement ].concat(subsequentElements)
      },
      peg$c112 = /^[A-Z]/,
      peg$c113 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c114 = /^[a-zA-Z0-9_]/,
      peg$c115 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c116 = function(first, remainder) { return first + remainder.join('') },
      peg$c117 = "\"",
      peg$c118 = peg$literalExpectation("\"", false),
      peg$c119 = /^[^"]/,
      peg$c120 = peg$classExpectation(["\""], true, false),
      peg$c121 = function(chars) { return chars.join('') },
      peg$c122 = "bool",
      peg$c123 = peg$literalExpectation("bool", false),
      peg$c124 = "string",
      peg$c125 = peg$literalExpectation("string", false),
      peg$c126 = "bytes",
      peg$c127 = peg$literalExpectation("bytes", false),
      peg$c128 = "int",
      peg$c129 = peg$literalExpectation("int", false),
      peg$c130 = "float",
      peg$c131 = peg$literalExpectation("float", false),
      peg$c132 = "link",
      peg$c133 = peg$literalExpectation("link", false),
      peg$c134 = /^[ \t\n\r]/,
      peg$c135 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c136 = "#",
      peg$c137 = peg$literalExpectation("#", false),
      peg$c138 = /^[^\r\n]/,
      peg$c139 = peg$classExpectation(["\r", "\n"], true, false),
      peg$c140 = /^[\r\n]/,
      peg$c141 = peg$classExpectation(["\r", "\n"], false, false),
      peg$c142 = function() { return },
      peg$c143 = "\r",
      peg$c144 = peg$literalExpectation("\r", false),
      peg$c145 = "\n",
      peg$c146 = peg$literalExpectation("\n", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseRoot() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseTypeDef();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseTypeDef();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseTypeDef() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseTypeName();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseDefinition();
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s4, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDefinition() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseMapDescriptor();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c4(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseListDescriptor();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseEnumKind();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseEnumDescriptor();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseUnionKind();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseUnionDescriptor();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c4(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseStructKind();
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseStructDescriptor();
                if (s3 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c4(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseSimpleKind();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s1);
              }
              s0 = s1;
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseMapKind() {
    var s0;

    if (input.substr(peg$currPos, 3) === peg$c6) {
      s0 = peg$c6;
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }

    return s0;
  }

  function peg$parseListKind() {
    var s0;

    if (input.substr(peg$currPos, 4) === peg$c8) {
      s0 = peg$c8;
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }

    return s0;
  }

  function peg$parseEnumKind() {
    var s0;

    if (input.substr(peg$currPos, 4) === peg$c10) {
      s0 = peg$c10;
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }

    return s0;
  }

  function peg$parseUnionKind() {
    var s0;

    if (input.substr(peg$currPos, 5) === peg$c12) {
      s0 = peg$c12;
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }

    return s0;
  }

  function peg$parseStructKind() {
    var s0;

    if (input.substr(peg$currPos, 6) === peg$c14) {
      s0 = peg$c14;
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }

    return s0;
  }

  function peg$parseSimpleKind() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseBaseType();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c16(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseListDescriptor() {
    var s0, s1, s2, s3, s4, s5;
